# lm-quant-toolkit

./: .coveragerc  .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup-harness.sh  setup-visualization.sh  tox.ini
data-vis/: .Rhistory  .gitignore  apportion-kurt.R  apportion-sensi.R  check-lowbits-allot.R  check-mem.R  check-mxq-allocation.R  check-normality.R  com-fnorm.R  combine-vit.R  combine.R  data-vis.Rproj  fnorm-Llama-2-7b-hf.csv  gen-table-boost-mxq-llm.R  gen-table-milp-mxq-llm.R  gen-table-mxq-llm.R  gpu-mem-gap.R  init_milp_sensi_weight.R  llm-3d.R  plot-ablation.R  plot-boost-sensi-kurt.R  plot-circos-allot-icaart.R  plot-circos-allot-js.R  plot-circos-allot.R  plot-circos-wdist.R  plot-fnorm-kurt.R  plot-kmeans-quant.R  plot-kurt-curve.R  plot-kurtosis-diff.R  plot-lpnorm.R  plot-mem-consumption.R  plot-mxq-allocation.R  plot-mxq-allot-icaart.R  plot-mxq-allot-trio.R  plot-mxq-gap.R  plot-mxq-kurt.R  plot-mxq-llm.R  plot-mxq-paired.R  plot-mxq-ppl-icaart.R  plot-mxq-vit.R  (+25 more)
scripts/: .pdbrc  2bit.sh  debug-dump-mxq-quant-cfgs-mxq.sh  debug-dump-sensi-rtn.sh  debug-llama-sensi-7b-cfg-wise-5.sh  debug-llama-sensi-milp.sh  debug-llama2-13b-boost.sh  debug-llm-ppl-13b-awq.sh  debug-milp-low-bit.sh  debug-mistral-sensi-metrics.sh  debug-quant-4_51-mxq.sh  debug-vit-zs-mxq-kurt-boost.sh  debug-vit.sh  dump-cfgs-for-check.sh  dump-fnorm.sh  dump-kurtosis.sh  dump-mistral-sensi-metrics.sh  dump-mxq-obj.sh  dump-mxq-quant-cfgs-mxq1.sh  dump-mxq-quant-cfgs.sh  dump-quant-cfg-allot.sh  dump-quant-cfg-llama-sensi-milp-7b-2.sh  dump-qwen-sensi-metrics.sh  dump-sensi-gemma-quant-methods.sh  dump-sensi-gemma2-quant-methods.sh  dump-sensi-llama-quant-methods.sh  dump-sensi-mistral.sh  dump-sensi-variant-metrics.sh  dump-sensitivity-metrics-instruct.sh  dump-sensitivity-metrics-llama2-13b.sh  dump-sensitivity-metrics.sh  dump-variant-sensi-metrics.sh  eval-linear-probe.sh  eval-llm-leaderboard-fp16.sh  eval-llm-leaderboard-hqq.sh  eval-llm-ppl-13b-awq.sh  eval-llm-ppl-13b-mxq-4.99.sh  eval-llm-ppl-2bit-dense1-mxq.sh  eval-llm-ppl-3.42-mxq.sh  eval-llm-ppl-3bit-dense1-mxq.sh  (+116 more)
src/: .gitignore  .pdbrc  cli.py  debug-bench.sh  debug-llm.sh  debug-vit.sh  dump.py  run-bench.sh  run-llm.sh  run-vit.sh
tests/: .pdbrc  qwen35-load.py  (+7 more)
(+476 files in other folders)
