[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'lm_quant_toolkit'
description = 'LLM Quantization Evaluation Harness'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [{name='Justin Zhang', email='schnell18@gmail.com'}]
dependencies = [
    # "-e git+https://github.com/casper-hansen/AutoAWQ@5f3785dcaa107ca76f5fa5355f459370c86f82d6#egg=autoawq",
    # "-e git+ssh://git@github.com/schnell18/hqq.git@5ba2243049f0b96fe5d8843693f919faeb560c02#egg=hqq",
    # "-e git+https://github.com/EleutherAI/lm-evaluation-harness@928e8bb6f50d1e93ef5d0bcaa81f8c5fd9a6f4d8#egg=lm_eval",
    "accelerate>=0.30.1",
    "bitsandbytes>0.37.0",
    "antlr4-python3-runtime==4.11.0",
    "datasets==2.20.0",
    "Jinja2==3.1.4",
    "langdetect==1.0.9",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "optimum>=1.21.4",
    "pandas==2.2.2",
    "safetensors==0.4.3",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "sentencepiece==0.2.0",
    "tokenizers>=0.19.1",
    "torch>=2.1.0",
    "tqdm==4.66.4",
    "transformers>=4.41.2"
    # "triton>=2.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = '>=3.7'
dynamic = ['version']

[project.scripts]
#fnorm = 'lm_quant_toolkit.prep.fnorm:main'

[tools.setuptools]
  package-dir = {'' = 'src'}

[tools.setuptools.dynamic]
version = {attr = 'lm_quant_toolkit.version.version'}

[tool.setuptools_scm]
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'

[project.urls]
'Homepage' = 'https://github.com/schnell18/lm-quant-toolkit'

[project.optional-dependencies]
dev = ["bumpver", "pip-tools"]
test = [ 'tox' ]
doc = ['sphinx']
